2009-01-02  Alessandro Decina  <alessandro.d@gmail.com>

	* configure.ac:
	* tests/examples/seek/Makefile.am:
	* tests/icles/Makefile.am:
	Make the seek and colorkey examples depend on gtk+-x11 as they use
	GDK_WINDOW_XID.
	Fixes the build with gtk+-quartz.

2008-12-31  Jan Schmidt  <jan.schmidt@sun.com>

	* win32/common/libgstaudio.def:
	* win32/common/libgsttag.def:
	* win32/common/libgstvideo.def:
	Add new exports to win32 files.

2008-12-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/tag/gsttagdemux.c: (gst_tag_demux_result_get_type):
	* gst-libs/gst/tag/gsttagdemux.h:
	Add GType for GstTagDemuxResult enum.

2008-12-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/video/Makefile.am:
	* gst-libs/gst/video/video.h:
	Add glib-mkenum for GstVideoFormat enum GTYPE auto-generation.
	This will help bindings to use it.

2008-12-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/audio/Makefile.am:
	* gst-libs/gst/audio/audio.c:
	* gst-libs/gst/audio/multichannel.h:
	* gst-libs/gst/audio/testchannels.c:
	* win32/MANIFEST:
	* win32/common/audio-enumtypes.c:
	(gst_audio_channel_position_get_type),
	(gst_ring_buffer_state_get_type),
	(gst_ring_buffer_seg_state_get_type),
	(gst_buffer_format_type_get_type), (gst_buffer_format_get_type):
	* win32/common/audio-enumtypes.h:
	* win32/common/multichannel-enumtypes.c:
	* win32/common/multichannel-enumtypes.h:
	* win32/vs6/grammar.dsp:
	* win32/vs6/libgstaudio.dsp:
	* win32/vs7/libgstaudio.vcproj:
	* win32/vs8/libgstaudio.vcproj:
	Switch glib-mkenum for gst-libs/gst/audio from multichannel- to
	audio- in order to wrap all enums declarations of that library.
	This modification should not matter since that header file is not a
	public header (it will be included by public headers).
	Modify win32 crap^Wfiles accordingly.

2008-12-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosrc.h:
	* gst-libs/gst/audio/gstbaseaudiosink.h: